<resources>
	<string name="app_PREFNAME">MetroApp</string>
	<string name="app_TOKEN">app_TOKEN</string>
	<string name="app_CART_COUNT">app_CART_COUNT</string>
	<string name="app_WALKPAGES">app_WALKPAGES</string>
	<string name="app_TEMP_FIRSTLOGIN">app_TEMP_FIRSTLOGIN</string>
	<string name="app_TEMP_JUSTREGISTERED">app_TEMP_JUSTREGISTERED</string>
	<string name="app_TEMP_CARDEXPIRED">app_TEMP_CARDEXPIRED</string>
	<string name="app_LANGUAGE">app_LANGUAGE</string>
	<string name="app_RESTARTED">app_RESTARTED</string>
	<string name="app_SAVED_PHONE">app_SAVED_PHONE</string>
	<string name="app_SAVED_PASSWORD">app_SAVED_PASSWORD</string>
	<string name="app_LANG_CHANGE">app_LANG_CHANGE</string>
	<string name="app_CARD_NUMBER">app_CARD_NUMBER</string>
	<string name="app_CARD_VALID_TO">app_CARD_VALID_TO</string>
	<string name="noBarCodeSaved">Вибачте, але у Вас немає збереженого номеру картки, або термін дії тимчасової картки закінчився.</string>
	<string name="facebook_app_id">1741295382805681</string>
	<string name="app_GA_CODE">UA-80723818-1</string>
    <string name="app_name">METRO</string>
    <string name="app_Version">METROAPP/1.0.5</string>
    <string name="login_startLoad">Дані завантажуються.\nЗачекайте будь ласка.</string>
    <string name="login_ihavecard">Я вже маю картку</string>
    <string name="login_iwouldhavecard">Я хочу мати картку</string>
    <string name="login_createprofile">Створити профіль</string>
    <string name="login_createcard">Отримати картку</string>
	<string name="login_registrationButton">Реєстрація</string>
	<string name="login_cominButton">Увійти</string>
	<string name="login_scancodeBig">ВІДСКАНУВАТИ КОД</string>
	<string name="login_confirmBig">ПІДТВЕРДИТИ</string>
	<string name="login_cominBig">УВІЙТИ</string>
	<string name="login_sendquestionBig">НАДІСЛАТИ ЗАПИТАННЯ</string>
	<string name="login_getpasswordBig">ОТРИМАТИ ПАРОЛЬ</string>
	<string name="login_refreshpasswordBig">ОНОВИТИ ПАРОЛЬ</string>
	<string name="login_okBig">ДОБРЕ</string>
	<string name="login_scancodetitle">Ви можете відсканувати код Вашої картки за допомогою камери телефону</string>
	<string name="login_inputcodetitle">Введіть номер Вашої картки для успішної авторизації у додатку</string>
	<string name="login_inputcodehint">Введіть номер Вашої картки</string>
	<string name="login_cardnotexisttitle">Такий номер картки не існує. Можливо, Ви не вірно ввели номер.
	    Спробуйте, будь ласка, ще раз.</string>
	<string name="login_cardnotexisthint">Введіть номер ще раз</string>
	<string name="login_havequestionaboutautorization">Маєте питання щодо авторизації? Представники нашого 
	    контактного центру Вам допоможуть.</string>
	<string name="login_sendquetion">Надіслати запитання</string>
	<string name="inner_sendquetion">Ми з радістю відповімо на будь-яке Ваше запитання</string>
	<string name="login_cardalreadyregistered">На даний номер картки вже зареєстровано профіль користувача. Будь ласка,
	    увійдіть у додаток.</string>
	<string name="login_scancodeButton">Сканувати код</string>
	<string name="login_inputcodeButton">Ввести вручну</string>
	<string name="login_authorization">Авторизація</string>
	<string name="login_cardautorized">Ми знайшли дані про Вашу картку. Підтвердіть, будь ласка, коректність інформації.</string>
	<string name="login_phoneconfirm">Перевірте, будь ласка, Ваш номер телефону для створення профілю та отримання паролю.</string>
	<string name="login_phoneconfirmyes">Так, це мій номер</string>
	<string name="question_texthint">Текст Вашого запитання</string>
	<string name="question_emailhint">Електронна адреса</string>
	<string name="question_phonehint">Номер Вашого телефону </string>
	<string name="question_allfieldstext">Усі поля обов\'язкові для заповнення</string>
	<string name="question_send">Надіслати</string>
	<string name="question_sendthanks">Дякуємо!</string>
	<string name="question_sendthankstext">Ми вдячні за Ваше запитання! Наші співробітники зателефонують Вам 
	    або нададуть відповідь за допомогою електронної пошти.</string>
	<string name="question_errorMessage">Повідомлення не може бути пустим</string>
	<string name="question_errorEmail">Невірно введена e-mail адреса</string>
	<string name="question_errorPhone">Невірно введений номер телефону</string>
	<string name="login_datahasbeensent">Дані для входу в додаток було відправлено на вказаний Вами під час 
	    реєстрації номер мобільного телефону</string>
	<string name="login_enterinappTitle">Вхід у додаток</string>
	<string name="login_passwordforgoten"><u>Забули пароль?</u></string>
	<string name="login_enterinappError">Невірно вказаний номер телефону або пароль. Будь ласка, спробуйте ще раз.</string>
	<string name="login_restorepasswordTitle">Відновлення паролю</string>
	<string name="login_restorepasswordtext">Будь ласка, введіть номер телефону для відновлення паролю</string>
	<string name="login_restorepasswordError">Дані про користувача не знайдено. Переконайтеся, що Ви правильно вказали
	    номер мобільного телефону.</string>
	<string name="login_passwordhasbeensent">Пароль успішно відправлено на вказаний Вами номер мобільного телефону.</string>
	<string name="login_phoneeditHint">380 (__)_______</string>
	<string name="login_emaileditHint">your@email.com</string>
	<string name="login_passwordeditHint">Пароль</string>
	<string name="preloader_dataString">Дані завантажуються.</string>
	<string name="preloader_waitString">Зачекайте, будь ласка.</string>
	<string name="reg_registration">Реєстрація</string>
	<string name="reg_registrationFiz">Реєстрація фізичної особи</string>
	<string name="reg_registrationYur">Реєстрація юридичної особи</string>
	<string name="reg_iRegisterAs">Я реєструюсь як:</string>
	<string name="reg_FizOsoba">ФІЗИЧНА ОСОБА</string>
	<string name="reg_UrOsobaSPD">ЮРИДИЧНА ОСОБА/СПД</string>
	<string name="reg_regPrizvische">Прізвище</string>
	<string name="reg_regName">Ім\'я</string>
	<string name="reg_regPobatkovi">По-батькові</string>
	<string name="reg_regMobPhone">Мобільний телефон</string>
	<string name="reg_regEmail">Електронна адреса</string>
	<string name="reg_TcGetCard">Оберіть найближчий до Вас ТЦ METRO</string>
	<string name="reg_TcGetCardPrompt">Виберіть, будь ласка</string>
	<string name="reg_allFieldsMust">Усі поля обов\'язкові для заповнення.</string>
	<string name="reg_regDali">Далі</string>
	<string name="reg_regError">Будь ласка,\nвнесіть коректні дані!</string>
	<string name="reg_regPosada">Посада</string>
	<string name="reg_regCompanyName">Назва компанії</string>
	<string name="reg_regBirchDate">Дата народження</string>
	<string name="reg_regGetRegister">ЗАРЕЄСТРУВАТИСЬ</string>
	<string name="reg_regDateHint">Число</string>
	<string name="reg_regMonthHint">Місяць</string>
	<string name="reg_regYearHint">Рік</string>
	<string name="reg_regDateError">Вибачте, але Ви ввели неіснуючу дату</string>
	<string name="reg_regAgreement">Реєструючись, ви погоджуетесь з 
	    <a href="http://promo.metro.ua/Content/CmsFile/ua/pdf__umovi-pokupki-v-optovih-torgovih-centrah.pdf"> Умовами оформлення картки клієнта</a>, 
	    <a href="http://promo.metro.ua/Content/CmsFile/ua/pdf__METRO_Bonus_Loyalty_Program_Terms_and_Conditions.pdf"> Правилами участі в програмі лояльності «METRO Бонус» та угодою про конфіденційність інформації</a>.</string>
	<string name="reg_regCompanySphere">Сфера діяльності компанії</string>
	<string name="reg_regCompanyNapryam">Напрямок діяльності компанії</string>
	<string name="reg_regEDRPOU">ЄДРПОУ/ІНН</string>
	<string name="reg_regCONTINUE">ПРОДОВЖИТИ</string>
	<string name="reg_regOneThree">1/3</string>
	<string name="reg_regTwoThree">2/3</string>
	<string name="reg_regThreeThree">3/3</string>
	<string name="reg_yurAddCardOwners">Додати власників карток</string>
	<string name="reg_yurCardOwner1">Власник №1</string>
	<string name="reg_yurCardOwner2">Власник №2</string>
	<string name="reg_yurCardOwner3">Власник №3</string>
	<string name="reg_yurCardOwner4">Власник №4</string>
	<string name="reg_yurCardOpen">РОЗГОРНУТИ</string>
	<string name="reg_yurCardClose">ЗГОРНУТИ</string>
	<string name="reg_yurCardOwnerDelete">Видалити власника</string>
	<string name="reg_CardOwner1_notComplete">Дані власника №1 не заповнені!</string>
	<string name="reg_CardOwner2_notComplete">Дані власника №2 не заповнені!</string>
	<string name="reg_CardOwner3_notComplete">Дані власника №3 не заповнені!</string>
	<string name="reg_CardOwner4_notComplete">Дані власника №4 не заповнені!</string>
	<string name="reg_yurGetProposal1">Я хочу отримувати акційні пропозиції на адресу компанії, яка була вказана раніше</string>
	<string name="reg_yurGetProposal2">Вказати іншу адресу</string>
	<string name="reg_yurRegion">Область</string>
	<string name="reg_yurCity">Місто/населений пункт</string>
	<string name="reg_yurStreetType">Тип вулиці</string>
	<string name="reg_yurStreet">Назва вулиці</string>
	<string name="reg_yurHouse">Будинок</string>
	<string name="reg_yurFlat">Номер квартири/офісу</string>
	<string name="reg_yurIndex">Поштовий індекс</string>
	<string name="reg_yurGetProposal3">Я хочу отримувати акційні пропозиції на мій e-mail, як керівника компанії</string>
	<string name="reg_yurGetProposal4">Вказати інший e-mail</string>
	<string name="reg_yurEmailAddress">Електронна адреса</string>
	<string name="reg_yurGetGoldCard">У випадку отримання статусу “Золотий/Платиновий” клієнт хочу отримувати бонуси у вигляді прямої знижки</string>
	<string name="login_comin">Увійти</string>
	<string name="splashpage1_text1">Тут Ви зможете знайти всі акційні пропозиції</string>
	<string name="splashpage1_text2">Користуватися карткою METRO в магазині</string>
	<string name="splashpage1_text3">Прокласти маршрут до найближчого магазину</string>
	<string name="splashpage1_text4">Зберегти список бажаних покупок і порахувати їх загальну вартість</string>
	<string name="splashpage1_text5">ГОРТАЙТЕ ДАЛІ</string>
	<string name="splashpage2_text1">НАПИШІТЬ\nВІДГУК</string>
	<string name="splashpage2_text2">СФОРМУЙТЕ ВЛАСНИЙ\nСПИСОК ПОКУПОК</string>
	<string name="splashpage2_text3">ВАША\nКАРТКА\nMETRO</string>
	<string name="splashpage2_text4">ДІЗНАЙТЕСЯ ПРО ВСІ\nТОВАРИ ЗІ ЗНИЖКАМИ</string>
	<string name="splashpage2_text5">ПРОКЛАДІТЬ МАРШРУТ\nДО НАЙБЛИЖЧОГО\nМАГАЗИНУ</string>
	<string name="splashpage2_button">ДАЛІ</string>
	<string name="my_kard">Моя картка</string>
	<string name="discount_week">Акції тижня</string>
	<string name="map_shops">Мапа магазинів</string>
	<string name="add_to_list">Додати до списку</string>
	<string name="uah">грн</string>
	<string name="Error_server_not_responding">Помилка отримання данних, спробуйте, будь ласка, пізніше</string>
	<string name="Error_card_numberIncorrect">Неправильно введений номер картки!</string>
	<string name="Error_enteredDataIncorrect">Неправильно введені дані профілю!</string>
	<string name="Error_401">Невірно вказано номер телефону або пароль. Буль ласка, спробуйте ще раз.</string>
	<string name="Error_800">Неправильний номер картки!</string>
	<string name="Error_801">Картка вже зареєстрована!</string>
	<string name="Error_804">Вказаний номер телефону не зареєстровано!</string>
	<string name="Error_806">На вказаний вами номер вже зареєстровано картку клієнта METRO. Будь-ласка, введіть інший номер для продовження реєстрації.</string>
	<string name="Error_500">Помилка при введені номера картки (повинно бути 22 символи).</string>
	<string name="Error_503">Помилка перевірки checksum картки (помилка при введенні).</string>
	<string name="dialog_TempCardTitle">Будь ласка, зверніть увагу!</string>
	<string name="dialog_TempCardButton"><u>Дізнайтеся як отримати постійну картку.</u></string>
	<string name="dialog_TempCardLeft">Внести дані</string>
	<string name="dialog_TempCardExpired">Термін дії тимчасової картки закінчився. Будь ласка, внесіть дані Вашої постійної картки для подальшого використання додатку при покупках у магазині. </string>
</resources>