<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/regin_ihavecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="roboto medium"
            android:text="@string/login_ihavecard"
            android:textColor="@color/metro_black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/regin_createProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="26dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/bg_btn_yellow"
            android:paddingBottom="10dp"
            android:paddingTop="9dp"
            android:text="@string/login_createprofile"
            android:textAllCaps="true"
            android:textColor="@color/metro_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/regin_iwouldhavecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_iwouldhavecard"
            android:textColor="@color/metro_black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/regin_getCard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:background="@drawable/bg_btn_navy"
            android:paddingBottom="10dp"
            android:paddingTop="9dp"
            android:text="@string/login_createcard"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
