<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reg_CardOwner_3RL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp" >

    <TextView
        android:id="@+id/reg_yurCardOwner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="9dp"
        android:text="@string/reg_yurCardOwner3"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/reg_yurCardOpenLL3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="9dp"
        android:orientation="horizontal"
        android:paddingTop="2dp" >

        <TextView
            android:id="@+id/reg_yurCardOpen3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_yurCardClose"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/reg_yurCardOpenImageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/spinner_arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_CardOwner_3LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_yurCardOwner3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reg_iRegisterAs3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="18dp"
            android:text="@string/reg_regPrizvische"
            android:textSize="14sp" />

        <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/reg_regPrizvischeEditText3"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_btn_white31"
            android:gravity="left|center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textSize="14sp" >
        </EditText>

        <TextView
            android:id="@+id/reg_regName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/reg_regName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/reg_regNameEditText3"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_btn_white31"
            android:gravity="left|center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textSize="14sp" >
        </EditText>

        <TextView
            android:id="@+id/reg_regPobatkovi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/reg_regPobatkovi"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/reg_regPobatkoviEditText3"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_btn_white31"
            android:gravity="left|center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textSize="14sp" >
        </EditText>

        <TextView
            android:id="@+id/reg_regMobPhone3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/reg_regMobPhone"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/reg_regMobPhoneEditText3"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_btn_white31"
            android:gravity="left|center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:hint="@string/login_phoneeditHint"
            android:inputType="number"
            android:maxLength="12"
            android:singleLine="true"
            android:textSize="14sp" >
        </EditText>

        <TextView
            android:id="@+id/reg_regEmail3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/reg_regEmail"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/reg_regEmailEditText3"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_btn_white31"
            android:gravity="left|center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textSize="14sp" >
        </EditText>

        <TextView
            android:id="@+id/reg_yurCardOwnerDelete3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="13dp"
            android:layout_marginTop="8dp"
            android:text="@string/reg_yurCardOwnerDelete"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>